app/assets/stylesheets/components/container.scss
.container-wide {
  width: 100%;
  max-width: 100rem;
  margin-left: auto;
  margin-right: auto;
}
.container {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}
.container-narrow {
  width: 100%;
  max-width: 50rem;
  margin-left: auto;
  margin-right: auto;
}
.container-narrower {
  width: 100%;
  max-width: 38rem;
  margin-left: auto;
  margin-right: auto;
}

/**
 * Bootstrap container
 */
.bs-container {
  &--default {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;

    @media (min-width: 768px) {
      width: 750px;
    }
    @media (min-width: 992px) {
      width: 970px;
    }
    @media (min-width: 1200px) {
      width: 1170px;
    }
  }

  &--fluid {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
  }
}

